syntax = "proto3";
package pb.boilerplate;

option go_package = "pb/boilerplate";

message Product {
    int64 id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
    string created_at = 5;
    string updated_at = 6;
}

message CreateProductRequest {
    string name = 1;
    string description = 2;
    float price = 3;
}

message CreateProductRespose {
    string message = 1;
}
