syntax = "proto3";
package pb.boilerplate;

option go_package = "pb/boilerplate";

import "pb/boilerplate/product.proto";

service ProductService {
    // product
    rpc CreateProduct(CreateProductRequest) returns (CreateProductRespose) {}
}
